Merge v3 from dev into main (#191)